--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "french-numbers-to-words",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Convert French numbers to their written form",
   "main": "index.js",
   "scripts": {
@@ -20,8 +20,5 @@
   "bugs": {
     "url": "https://github.com/fjobeir/french-numbers-to-words/issues"
   },
-  "homepage": "https://github.com/fjobeir/french-numbers-to-words#readme",
-  "dependencies": {
-    "french-numbers-to-words": "^0.1.1"
-  }
+  "homepage": "https://github.com/fjobeir/french-numbers-to-words#readme"
 }
