--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "french-numbers-to-words",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Convert French numbers to their written form",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "jest"
   },
