--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "french-numbers-to-words",
   "version": "1.0.5",
   "description": "Convert French numbers to their written form",
-  "main": "./dist/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest"
   },
